--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
+    <color name="todoColorPrimary">#FF5722</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="black_effective">#2a2a2a</color>
+    <color name="cyan_light">#c9ebee</color>
+    <color name="navy_blue_dark">#1C3A4E</color>
+    <color name="lightBlue">#bef1ee</color>
+    <color name="lightGreen">#4ae12c</color>
+    <color name="dark_gray">#696969</color>
+    <color name="navy_blue">#214258</color>
+    <color name="light_gray">#dbdbdb</color>
+    <color name="cyan_dark">#70BDC6</color>
+    <color name="cyan">#b5e3e7</color>
+    <color name="red_dark2">#D85A1B</color>
+    <color name="red_dark">#A83904</color>
+    <color name="orange_light">#EB7B46</color>
+    <color name="primary">#F44336</color>
+    <color name="primary_dark">#D32F2F</color>
+    <color name="primary_light">#FFCDD2</color>
+    <color name="primary_text">#212121</color>
+    <color name="accent">#FFC107</color>
+    <color name="secondary_text">#727272</color>
+    <color name="divider">#FFFFFF</color>
+    <color name="text">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="tab_strip">#B42929</color>
+    <color name="yellow">#fff200</color>
+    <color name="purple_light">#DEACE7</color>
+    <color name="purple_dark">#921E71</color>
+    <color name="purple">#D66FB9</color>
 </resources>
