--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,15 @@
         android:layout_height="match_parent"
         android:clipChildren="false"
         android:foregroundGravity="left"
-        android:gravity="start"
-       >
+        android:gravity="start">
 
         <include
 
             layout="@layout/app_bar_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
