--- a/app/src/main/res/layout/fragment_extension.xml
+++ b/app/src/main/res/layout/fragment_extension.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:scrollbars="vertical"
     tools:context=".ui.extensionfragment.ExtensionFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -21,9 +23,8 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
             android:layout_weight="1"
-            android:text="@string/amount">
-
-        </TextView>
+            android:text="@string/amount"
+            android:layout_marginEnd="16dp" />
 
         <EditText
             android:id="@+id/txtAmount"
@@ -38,6 +39,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_weight="1"
+            android:textSize="18sp"
            >
 
         </TextView>
@@ -67,7 +69,8 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
             android:layout_weight="1"
-            android:text="@string/date">
+            android:text="@string/date"
+            android:layout_marginEnd="16dp">
 
         </TextView>
 
@@ -84,6 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
             android:layout_weight="1"
+            android:textSize="18sp"
             >
 
         </TextView>
@@ -113,7 +117,8 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
             android:layout_weight="1"
-            android:text="formatText">
+            android:text="formatText"
+            android:layout_marginEnd="16dp">
 
         </TextView>
 
@@ -160,19 +165,21 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <TextView
-            android:id="@+id/txtResultValidation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:layout_marginLeft="16dp"
-            android:textColor="@color/red_dark"
-            android:layout_weight="1"
-            >
 
-        </TextView>
     </LinearLayout>
+    <TextView
+        android:id="@+id/txtResultValidation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_gravity="center"
+        android:textColor="@color/red_dark"
+        android:layout_weight="1"
+        >
 
+    </TextView>
     <Button
         android:layout_marginTop="16dp"
         android:layout_gravity="center"
@@ -204,8 +211,9 @@
             />
         <Button
             android:layout_marginTop="16dp"
-            android:layout_gravity="center"
-            android:gravity="center"
+
+
+            android:layout_marginBottom="16dp"
             android:id="@+id/btnCheckConnection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -214,3 +222,4 @@
         </Button>
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
