--- a/app/src/main/res/layout/fragment_film_list.xml
+++ b/app/src/main/res/layout/fragment_film_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.viewfilmlist.FilmListFragment">
+    tools:context=".ui.viewfilmlist.view.FilmListFragment">
 
     <RelativeLayout
         android:id="@+id/recyclerCaseContainer"
