--- a/app/src/main/res/layout/film_card_layout.xml
+++ b/app/src/main/res/layout/film_card_layout.xml
@@ -21,7 +21,7 @@
             android:orientation="horizontal"
             android:weightSum="3">
 <LinearLayout
-    android:layout_weight="2"
+    android:layout_weight="3"
     android:layout_marginRight="10dp"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -51,15 +51,14 @@
             android:paddingTop="5dp"
             android:paddingRight="5dp"
             android:paddingBottom="5dp"
-            android:text="@string/director"
+            android:text="@string/genre"
             android:textAppearance="?android:attr/subtitle"
             android:textSize="16sp" />
         <TextView
-            android:id="@+id/txtFilmDirector"
+            android:id="@+id/txtFilmGenre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
             android:paddingRight="5dp"
@@ -73,32 +72,6 @@
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/lblYear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-
-            android:paddingLeft="5dp"
-            android:paddingTop="5dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="5dp"
-            android:text="@string/year"
-            android:textAppearance="?android:attr/subtitle"
-            android:textSize="16sp" />
-        <TextView
-            android:id="@+id/txtYear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-
-            android:paddingLeft="5dp"
-            android:paddingTop="5dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="5dp"
-            android:text="2019"
-            android:textAppearance="?android:attr/subtitle"
-            android:textSize="16sp" />
 
     </LinearLayout>
     <LinearLayout
@@ -134,12 +107,12 @@
 
             <ImageView
                 android:id="@+id/imgfilm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_gravity="end"
                 android:layout_weight="1"
-                android:scaleType="center"
-                android:contentDescription="Film View"
+                android:scaleType="fitXY"
+                android:contentDescription="@string/film_view"
                 android:padding="5dp"
                 android:src="@drawable/film" />
 
