--- a/app/src/main/res/layout/fragment_film_list.xml
+++ b/app/src/main/res/layout/fragment_film_list.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.viewfilmlist.view.FilmListFragment">
 
     <RelativeLayout
@@ -22,6 +23,16 @@
             android:layout_marginBottom="8dp"
             android:scrollbars="vertical" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabNext"
+            app:backgroundTint="@color/colorAccent"
+            app:srcCompat="@drawable/baseline_next_plan_white_18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="16dp" />
     </RelativeLayout>
 
 </FrameLayout>
