--- a/app/src/main/res/layout/film_card_layout.xml
+++ b/app/src/main/res/layout/film_card_layout.xml
@@ -1,122 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:scrollbars="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         card_view:cardBackgroundColor="@color/cardview_light_background"
-        card_view:cardCornerRadius="10dp"
-        card_view:cardElevation="5dp"
-        card_view:cardUseCompatPadding="true"
-        >
+        card_view:cardCornerRadius="2dp"
+        card_view:cardElevation="2dp"
+        card_view:cardUseCompatPadding="true">
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="3">
-<LinearLayout
-    android:layout_weight="3"
-    android:layout_marginRight="10dp"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/txtFilmTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="16dp"
-        android:text="@string/parasite"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="20sp" />
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/lblFilmDirector"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:paddingLeft="5dp"
-            android:paddingTop="5dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="5dp"
-            android:text="@string/genre"
-            android:textAppearance="?android:attr/subtitle"
-            android:textSize="16sp" />
-        <TextView
-            android:id="@+id/txtFilmGenre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:paddingLeft="5dp"
-            android:paddingTop="5dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="5dp"
-            android:text="@string/parasite"
-            android:textAppearance="?android:attr/subtitle"
-            android:textSize="16sp" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/lblRating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:paddingLeft="5dp"
-            android:paddingTop="5dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="5dp"
-            android:text="@string/rating"
-            android:textAppearance="?android:attr/subtitle"
-            android:textSize="16sp" />
-        <RatingBar
-            android:id="@+id/ratingBar"
-            android:paddingTop="5dp"
-            android:numStars="5"
-            android:stepSize="1"
-            style="@style/Widget.AppCompat.RatingBar.Small"
-            android:rating="5"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-             />
-    </LinearLayout>
-
-
-</LinearLayout>
+            android:padding="16dp">
 
             <ImageView
+
                 android:id="@+id/imgfilm"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_gravity="end"
-                android:layout_weight="1"
-                android:scaleType="fitXY"
+                android:layout_width="75dp"
+                android:layout_height="90dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
                 android:contentDescription="@string/film_view"
-                android:padding="5dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/film" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/txtFilmTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@id/imgfilm"
+                android:ellipsize="end"
+                android:padding="10dp"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/title"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/lblFilmDirector"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txtFilmTitle"
+                android:layout_alignParentLeft="true"
+                android:padding="5dp"
+                android:text="@string/genre"
+                android:textAppearance="?android:attr/subtitle"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txtFilmGenre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txtFilmTitle"
+                android:layout_toStartOf="@id/imgfilm"
+                android:layout_toLeftOf="@id/imgfilm"
+                android:layout_toEndOf="@id/lblFilmDirector"
+                android:layout_toRightOf="@id/lblFilmDirector"
+                android:padding="5dp"
+                android:textAppearance="?android:attr/subtitle"
+                android:textSize="16sp" />
+        </RelativeLayout>
+
 
     </androidx.cardview.widget.CardView>
 
