--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -48,11 +48,14 @@
             android:name="genre"
             app:argType="string" />
         <argument
-            android:defaultValue="0"
             android:name="id"
             app:argType="integer" />
         <argument
             android:name="image"
             app:argType="string" />
+        <action
+            android:id="@+id/action_filmDetail_to_ListMovie"
+            app:destination="@id/filmListFragment" />
+
     </fragment>
 </navigation>
