--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:padding="16dp"
     android:gravity="center"
-    tools:context=".ui.splash.SplashActivity">
+    tools:context=".ui.splash.view.SplashActivity">
 
     <ImageView
         android:layout_width="wrap_content"
